[project]
name = "ci-healer"
version = "0.1.0"
description = "Autonomous CLI agent that fixes failing builds and tests"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
ci-healer = "ci_healer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ci_healer"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]
